--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ django-environ = "*"
 pillow = "*"
 whitenoise = "*"
 djangorestframework = "*"
+djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 autopep8 = "*"
