--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ whitenoise = "*"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
+psycopg2 = "*"
+django-storages = "*"
+boto3 = "*"
 
 [dev-packages]
 autopep8 = "*"
