--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
 asgiref==3.5.0
 autopep8==1.6.0
-boto3==1.21.33
-botocore==1.24.33
+boto3==1.21.34
+botocore==1.24.34
+cycler==0.11.0
 Django==4.0.3
 django-cors-headers==3.11.0
 django-environ==0.8.1
 django-storages==1.12.3
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
+fonttools==4.31.2
 gunicorn==20.1.0
 jmespath==1.0.0
+kiwisolver==1.4.2
+matplotlib==3.5.1
+numpy==1.22.3
+packaging==21.3
 Pillow==9.1.0
 psycopg2==2.9.3
 pycodestyle==2.8.0
 PyJWT==2.3.0
+pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2022.1
 s3transfer==0.5.2
